# rebasebot

./: .gitignore  .pylintrc  Containerfile  Containerfile.tests  Makefile  OWNERS  README.md  go.mod  go.sum  main.go  main.py  merge-bot.py  pyproject.toml  requirements-hacking.txt  requirements.txt  setup.cfg  setup.py
.ci/openshift-ci/: Containerfile
hack/: configure-hooks.sh  lint  tests.sh
hacking/: configure-hooks.sh  lint  pre-commit
rebasebot/: bot.py  cli.py  github.py  lifecycle_hooks.py  pr_body.py  prow.py  rebase_summary.py  resume_flow.py  resume_state.py  slack.py  test.py
rebasebot/builtin-hooks/: example.sh  generate-capi-ocp-manifests.sh  update_go_modules.sh
rebasebot/builtin-hooks/source-ref-hooks/: latest-stable-release.sh
src/merge_bot/: __init__.py  cli.py  merge_bot.py  oauth.py  test.py
tests/: conftest.py  rebase_test_support.py  test_bot.py  test_cli.py  test_conflict_policy.py  test_github.py  test_lifecycle_hooks.py  test_pr_body.py  test_prow.py  test_rebase_resume_conflicts.py  test_rebase_resume_hooks.py  test_rebase_resume_validation.py  test_rebase_summary.py  test_rebases.py  test_slack.py
tests/data/: test-hook-script.sh  test-source-branch-hook-script.sh
