[metadata]
name = merge-bot
version = 0.0.1
author = Red Hat
author_email = shiftstack@example.com
description = A tool to merge changes into a GitHub repository
long_description = file: README.md
long_description_content_type = text/markdown
url = https://github.com/shiftstack/mergebot
project_urls =
    Bug Tracker = https://github.com/shiftstack/mergebot/issues
classifiers =
    Programming Language :: Python :: 3
    License :: OSI Approved :: MIT License
    Operating System :: OS Independent

[options]
package_dir =
    = src
packages = merge_bot
python_requires = >=3.6
install_requires =
    cryptography
    gitpython
    github3.py
    validators

[options.entry_points]
console_scripts =
    merge-bot = merge_bot:main
