[metadata]
name = rebasebot
version = 0.0.1
author = Red Hat
author_email = mfedosin@redhat.com
description = A tool to sync downstream repositories with their upstream 
long_description = file: README.md
long_description_content_type = text/markdown
url = https://github.com/cloud-team-poc/rebasebot
project_urls =
    Bug Tracker = https://github.com/cloud-team-poc/rebasebot/issues
classifiers =
    Programming Language :: Python :: 3
    License :: OSI Approved :: MIT License
    Operating System :: OS Independent

[files]
packages =
    rebasebot

[options]
python_requires = >=3.6
install_requires =
    cryptography
    gitpython
    github3.py
    requests
    retrying
    validators

[options.entry_points]
console_scripts =
    rebasebot = rebasebot.cli:main
